--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 	<body>
 		<div id="page">
 			<div id="content">
+				<div id="headerDiv">
+					<h1>It's my website from GIT BROO</h1>
+				</div>
 				<div id="url">
+					<label for="email_label">Link: </label>
 					<input type="text" class="form-control" id="url_input" placeholder="URL">
 				</div>
 				<div id="email">
@@ -15,6 +19,7 @@
 					<input type="email" class="form-control" id="email_input" placeholder="name@example.com">
 				</div>
 				<div id="message">
+					<label>Here should be your message</label>
 					<textarea class="form-control" id="message_textarea" rows="8" placeholder="message"></textarea>
 				</div>
 				<div id="buttons">
